--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    hello world
+    <nav class = "navbar">
+        <div class="navbar__container">
+            <a href = "/" id = "navbar__logo">NEXT</a>
+            <div class = "navbar__toggle" id = "mobile-menu">
+                <span class = "bar"></span>
+                <span class = "bar"></span>
+                <span class = "bar"></span>
+        </div>
+        <ul class = "navbar__menu">
+            <li class = "navbara__item">
+                <a href = "/" class = "navbar__links">Home</a>
+            </li>
+            <li class = "navbara__item">
+                <a href = "/images/tech.html" class = "navbar__links">Tech</a>
+            </li>
+            <li class = "navbara__item">
+                <a href = "/" class = "navbar__links">Products</a>
+            </li>
+            <li class = "navbara__btn">
+                <a href = "/" class = "button">Sign Up</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
