--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXT Website</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class = "navbar">
@@ -16,19 +16,20 @@
                 <span class = "bar"></span>
         </div>
         <ul class = "navbar__menu">
-            <li class = "navbara__item">
+            <li class = "navbar__item">
                 <a href = "/" class = "navbar__links">Home</a>
             </li>
-            <li class = "navbara__item">
-                <a href = "/images/tech.html" class = "navbar__links">Tech</a>
+            <li class = "navbar__item">
+                <a href = "/tech.html" class = "navbar__links">Tech</a>
             </li>
-            <li class = "navbara__item">
+            <li class = "navbar__item">
                 <a href = "/" class = "navbar__links">Products</a>
             </li>
-            <li class = "navbara__btn">
+            <li class = "navbar__btn">
                 <a href = "/" class = "button">Sign Up</a>
             </li>
         </ul>
     </nav>
+    <script src = "app.js"></script>
 </body>
 </html>
