--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
         <div class="social__media">
             <div class="social__media--wrap">
                 <div class="footer__logo">
-                    <a href="/" id="footer__logo"><i class="fas faa-gem"></i>NEXT</a>
+                    <a href="/" id="footer__logo"><i class="fas fa-gem"></i>NEXT</a>
                 </div>
-                <p class="website__right">© NEXT 2025. All right reserved</p>
+                <p class="website__rights">© NEXT 2025. All right reserved</p>
                 <div class="social__icons">
                     <a href="/" class="social__icon--link" target="_blank">
                         <i class="fab fa-facebook"></i>
